2008-09-18  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version to 2.19.0

	* ChangeLog.pre-2-18: rotate ChangeLog
	
	* === branch for 2.18 ===