@@ -1,3 +1,11 @@
+2008-09-19  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gutils.c (_glib_get_dll_directory)
+	* glib/gspawn-win32.c (do_spawn_with_pipes): Be a bit less
+	restrictive, look for the helper programs in the same folder where
+	the GLib DLL is, not necessarily in a "bin" subfolder of the top
+	GLib installation folder.
+
 2008-09-18  Matthias Clasen <mclasen@redhat.com>
 
 	* configure.in: Bump version to 2.19.0
